Add ZoomRatio TwoWay

--- a/08_ImageFunctions/ZoomThumbCodeBehind2/Views/ImageScrollViewer.xaml
+++ b/08_ImageFunctions/ZoomThumbCodeBehind2/Views/ImageScrollViewer.xaml
@@ -35,7 +35,7 @@
         
         <ScrollViewer x:Name="MyScrollViewer"
                       Style="{StaticResource ScrollViewerImageStyleKey}"
-                      v:ImageScrollViewer.ZoomPayload="{Binding ImageZoomPayload.Value, Mode=OneWayToSource}"
+                      v:ImageScrollViewer.ZoomPayload="{Binding ImageZoomPayload.Value, Mode=TwoWay}"
                       v:ImageScrollViewer.ScrollOffsetCenter="{Binding ImageScrollOffsetCenter.Value, Mode=TwoWay}" >
 
             <Image x:Name="MainImage"
