--- a/08_ImageFunctions/BlinkHilight/Views/MainWindow.xaml
+++ b/08_ImageFunctions/BlinkHilight/Views/MainWindow.xaml
@@ -11,13 +11,20 @@
         Name="RootWindow"
         Height="400" Width="600">
 
-    <StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
         <Button Margin="0,10,0,0"
-                Content="ReadImages"
+                Content="Blink Highlight"
                 Command="{Binding BlinkHighlightCommand, Mode=OneTime}" />
 
-        <Image Width="{Binding ActualWidth, ElementName=RootWindow}"
+        <Image Grid.Row="1"
+               Margin="5"
+               Width="{Binding ActualWidth, ElementName=RootWindow}"
                Height="{Binding ActualHeight, ElementName=RootWindow}" 
                Source="{Binding ImageSource.Value, Mode=OneWay}" />
-    </StackPanel>
+    </Grid>
 </Window>
