--- a/09_WPFGraphs/Graph2D/Views/MyDataGridStyle.xaml
+++ b/09_WPFGraphs/Graph2D/Views/MyDataGridStyle.xaml
@@ -5,17 +5,33 @@
            TargetType="{x:Type DataGridCell}">
         <Setter Property="TextBlock.TextAlignment"
                 Value="Right" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="PaleGreen" />
+                <Setter Property="Foreground"
+                        Value="Red" />
+            </Trigger>
+            <Trigger Property="IsSelected"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="Red" />
+                <Setter Property="Foreground"
+                        Value="Blue" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
-    
+
     <Style x:Key="DataGridColumnHeaderStyle"
            TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="HorizontalContentAlignment"
                 Value="Center" />
     </Style>
-    
+
     <Style x:Key="DataGridRowHeaderStyle"
            TargetType="{x:Type DataGridRowHeader}">
-        <Setter Property="TextBlock.HorizontalAlignment"
+        <Setter Property="HorizontalAlignment"
                 Value="Center" />
         <Setter Property="HorizontalContentAlignment"
                 Value="Center" />
