--- a/09_WPFGraphs/Graph2D_3/Views/MainWindow.xaml
+++ b/09_WPFGraphs/Graph2D_3/Views/MainWindow.xaml
@@ -1,10 +1,12 @@
-﻿<Window x:Class="Graph2D.Views.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:v="clr-namespace:Graph2D.Views"
+        xmlns:vm="clr-namespace:Graph2D.ViewModels"
         xmlns:prism="http://prismlibrary.com/"
+        xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="Graph2D.Views.MainWindow"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
         Title="Graph2D_3"
@@ -15,8 +17,7 @@
     </Window.Resources>
 
     <StackPanel>
-        <DataGrid AutoGenerateColumns="True"
-                  IsReadOnly="True"
+        <DataGrid IsReadOnly="True"
                   CanUserReorderColumns="False"
                   CanUserSortColumns="False"
                   CanUserResizeRows="False"
@@ -24,13 +25,83 @@
                   SelectionMode="Extended"
                   SelectionUnit="Cell"
                   HeadersVisibility="None"
-                  ItemsSource="{Binding Data, Converter={StaticResource Array2dToDataGridSourceConverter}, Mode=OneWay}" >
+                  ItemsSource="{Binding Data1, Mode=OneWay}"
+                  AutoGenerateColumns="False" >
 
-            <DataGrid.Resources>
-                <Style TargetType="{x:Type DataGridCell}">
-                    <EventSetter Event="Loaded" Handler="DataGridCell_Loaded"/>
-                </Style>
-            </DataGrid.Resources>
+            <DataGrid.Columns>
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="{x:Type DataGridColumnHeader}">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <TextBlock Text="R[0]" />
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding ColoredObjects[0].Object}"
+                                       Foreground="{Binding ColoredObjects[0].Foreground}"
+                                       Background="{Binding ColoredObjects[0].Background}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="{x:Type DataGridColumnHeader}">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <TextBlock Text="R[1]" />
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding ColoredObjects[1].Object}"
+                                       Foreground="{Binding ColoredObjects[1].Foreground}"
+                                       Background="{Binding ColoredObjects[1].Background}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="{x:Type DataGridColumnHeader}">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="R[2]" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding ColoredObjects[2].Object}"
+                                       Foreground="{Binding ColoredObjects[2].Foreground}"
+                                       Background="{Binding ColoredObjects[2].Background}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+
+            </DataGrid.Columns>
+
         </DataGrid>
     </StackPanel>
 </Window>
