--- a/09_WPFGraphs/Graph2D_3/Views/MainWindow.xaml
+++ b/09_WPFGraphs/Graph2D_3/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+﻿<Window x:Class="Graph2D.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,6 @@
         xmlns:v="clr-namespace:Graph2D.Views"
         xmlns:vm="clr-namespace:Graph2D.ViewModels"
         xmlns:prism="http://prismlibrary.com/"
-        xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="Graph2D.Views.MainWindow"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
         Title="Graph2D_3"
@@ -30,17 +29,9 @@
 
             <DataGrid.Columns>
                 <DataGridTemplateColumn>
-                    <DataGridTemplateColumn.HeaderStyle>
-                        <Style TargetType="{x:Type DataGridColumnHeader}">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        </Style>
-                    </DataGridTemplateColumn.HeaderStyle>
-
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <Grid>
-                                <TextBlock Text="R[0]" />
-                            </Grid>
+                            <TextBlock Text="R[0]" />
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
 
@@ -54,17 +45,9 @@
                 </DataGridTemplateColumn>
 
                 <DataGridTemplateColumn>
-                    <DataGridTemplateColumn.HeaderStyle>
-                        <Style TargetType="{x:Type DataGridColumnHeader}">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        </Style>
-                    </DataGridTemplateColumn.HeaderStyle>
-
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <Grid>
-                                <TextBlock Text="R[1]" />
-                            </Grid>
+                            <TextBlock Text="R[1]" />
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
 
@@ -78,12 +61,6 @@
                 </DataGridTemplateColumn>
 
                 <DataGridTemplateColumn>
-                    <DataGridTemplateColumn.HeaderStyle>
-                        <Style TargetType="{x:Type DataGridColumnHeader}">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        </Style>
-                    </DataGridTemplateColumn.HeaderStyle>
-
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
                             <TextBlock Text="R[2]" />
@@ -98,7 +75,6 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-
 
             </DataGrid.Columns>
 
